Ajout plus de detail dans le fichier README